<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_tutorial"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/babyGirlBackground"
    android:orientation="vertical"
    tools:context="com.example.android.babycare.Tutorial">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="8dp"
        android:baselineAligned="false">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:baselineAligned="false">

            <Button
                android:id="@+id/restart_game_over"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@color/buttonBackground"
                android:fontFamily="sans-serif-medium"
                android:gravity="center"
                android:onClick="restart"
                android:text="@string/bu_back"
                android:textColor="@color/babyGirlBackground"
                android:textSize="14sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:orientation="horizontal"
            android:baselineAligned="false">

            <TextView
                android:id="@+id/tv_baby_happiness"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical"
                android:fontFamily="sans-serif-medium"
                android:gravity="center"
                android:text="@string/tutorial_title"
                android:textAllCaps="true"
                android:textColor="@color/babyGirl"
                android:textSize="24sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:baselineAligned="false">

            <Button
                android:id="@+id/bu_quit_game_over"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/buttonBackgroundPapa"
                android:fontFamily="sans-serif-medium"
                android:gravity="center"
                android:onClick="credits"
                android:text="@string/bu_credits"
                android:textColor="@color/babyGirlBackground"
                android:textSize="14sp" />

        </LinearLayout>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginBottom="8dp"
        android:background="@color/babyGirl"
        android:baselineAligned="false"></View>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="8dp"
        android:paddingRight="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:text="@string/tutorial_a"
                android:textAlignment="center"
                android:textColor="@color/babyGirl"
                android:textSize="24sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:text="@string/tutorial_b"
                android:textAlignment="center"
                android:textColor="@color/babyBoy"
                android:textSize="24sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:text="@string/tutorial_c"
                android:textAlignment="center"
                android:textColor="@color/babyGirl"
                android:textSize="24sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:text="@string/tutorial_d"
                android:textAlignment="center"
                android:textColor="@color/babyBoy"
                android:textSize="24sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:text="@string/tutorial_e"
                android:textAlignment="center"
                android:textColor="@color/babyGirl"
                android:textSize="24sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:text="@string/tutorial_f"
                android:textAlignment="center"
                android:textColor="@color/babyBoy"
                android:textSize="24sp" />

        </LinearLayout>

    </ScrollView>

</LinearLayout>